--- a/mobile/public/index.html
+++ b/mobile/public/index.html
@@ -49,6 +49,8 @@
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/plugins/ScrollToPlugin.min.js"></script>
         <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
